chore: followup bug 1770808
Separator between Fx View button and the tabstrip loses is too close to the tabstrip when there are pinned tabs and tabs overflow

--- a/addon/chrome/content/overlay/multirow.css
+++ b/addon/chrome/content/overlay/multirow.css
@@ -17,7 +17,6 @@
 
 #tabbrowser-tabs {
   min-height: unset !important;
-  padding-inline-start: 0px;
 }
 
 .tabbrowser-tab {
